styles/main.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');

body, button {
    font-family: 'Inter', sans-serif;
}

main {
    width: 100%;
    max-width: 800px;
    margin: 0 auto;
    padding: 1rem;
    display: flex;
    flex-direction: column;
    min-height: 80vh;
    box-sizing: border-box;
}

body {
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    background-color: #fff9ec;
}

.title {
    text-align: center;
    font-weight: 900;
    font-style: italic;
}

.fab {
    display: flex;
    justify-content: center;
    align-items: center;
    position: fixed;
    bottom: 20px;
    right: 20px;
    width: 56px;
    height: 56px;
    background-color: #fad522;
    color: #fff;
    border: none;
    border-radius: 50%;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
    font-size: 24px;
    cursor: pointer;

    svg {
        fill: black;
    }
}

.fab:hover {
    filter: brightness(90%);
}

dialog {
    border: none;
    border-radius: 8px;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
    padding: 10px;
    width: 300px;

    p {
        margin: 0;
        padding: 0;
    }

    .closeButton {
        position: absolute;
        top: 10px;
        right: 10px;
        background: none;
        border: none;
        cursor: pointer;
        font-size: 24px;
        color: black;
    }

    form {
        fieldset {
            border: none;
            padding: 0;
            margin: 0;

            label {
                display: block;
                margin-top: 10px;
                font-size: 14px;
                font-weight: 600;
            }

            input {
                padding: 5px;
                margin-top: 5px;
                border: 1px solid #ddd;
                border-radius: 4px;
            }
        }

        .modalInputError {
            display: flex;
            align-items: center;
            color: red;
            font-size: 12px;
            margin-top: 5px;

            svg {
                fill: red;
                margin-right: 5px;
            }
        }

        button {
            display: flex;
            margin-top: 10px;
            padding: 5px 10px;
            border: none;
            border-radius: 4px;
            background-color: #fad522;
            color: black;
            cursor: pointer;
            font-size: 16px;
            align-items: center;

            svg {
                fill: black;
                margin-right: 5px;
            }
        }
    }
}

dialog h2 {
    margin-top: 0;
}

dialog::backdrop {
    background: rgba(0, 0, 0, 0.5);
}

#past-sessions {
    ul {
        display: flex;
        flex-direction: column;
        list-style: none;
        padding: 0;

        :first-child {
            /*  Round corners of first element  */
            border-top-left-radius: 8px;
            border-top-right-radius: 8px;
        }

        :last-child {
            /*  Round corners of last element  */
            border-bottom-left-radius: 8px;
            border-bottom-right-radius: 8px;
        }

        li {
            display: block;
            padding: 10px;
            border: 1px solid #ddd;
            border-bottom: 0.5px solid #ddd;
            background-color: #fff;
        }
    }
}

/* Mobile */
@media (max-width: 840px) {
    main {
        max-width: 100%;
    }
}

